# bitcoinvm

./: .gitignore  README.md
gadgets/: Cargo.toml
gadgets/ripemd160/ref_impl/: Cargo.toml
gadgets/ripemd160/ref_impl/src/: lib.rs
gadgets/ripemd160/reference/: Cargo.toml
gadgets/ripemd160/reference/src/: boolean_functions.rs  constants.rs  helper_functions.rs  lib.rs  ripemd160.rs
gadgets/src/: lib.rs
gadgets/src/bitcoinvm_circuit/: constants.rs  execution.rs  mod.rs  opcode_table.rs  util.rs
gadgets/src/bitcoinvm_circuit/crypto_opcodes/: mod.rs
gadgets/src/bitcoinvm_circuit/crypto_opcodes/checksig/: checksig.rs  checksig_util.rs  mod.rs  parity_table.rs
gadgets/src/bitcoinvm_circuit/crypto_opcodes/util/: mod.rs  pk_parser.rs
gadgets/src/bitcoinvm_circuit/util/: expr.rs  is_zero.rs  script_parser.rs
gadgets/src/opcodes/: checksig.rs  constants.rs  mod.rs  parity_table.rs  util.rs
gadgets/src/opcodes/util/: sign_types.rs
gadgets/src/ripemd160/: mod.rs  table16.rs
gadgets/src/ripemd160/ref_impl/: constants.rs  ripemd160.rs
gadgets/src/ripemd160/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
gadgets/src/ripemd160/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
gadgets/src/ripemd160/table16/message_schedule/: schedule_gates.rs  schedule_util.rs
spec/: bvm.bib  bvm.tex  ripemd160.tex
